docs: test RichUi with Mockito
The old rule allowed no mocking framework, so the spec said RichUi gets no
test. The rule changed. RichUi now takes its LineReader, Terminal, PrintStream
and Spinner in the constructor, and a static open method builds the real ones.
A test then mocks the two JLine types.

Spinner becomes an injected object and not a static factory, so a test can
give RichUi a subclass that records the calls.

Also corrects the source javadoc and three documents that stated the old rule.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SQhrPxWHttn73DikEMDsjy